--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">News Reader</string>
+    <string name="results">Received %d results</string>
+    <string name="error_title">Oops</string>
+    <string name="network_error">Something went wrong, are you connected? debug: %s</string>
+    <string name="ok">Ok</string>
 </resources>
