--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">News Reader</string>
+    <string name="api_attribution">Powered by NewsAPI.org</string>
     <string name="results">Received %d results</string>
     <string name="error_title">Oops</string>
     <string name="network_error">Something went wrong, are you connected? debug: %s</string>
